<resources>
    <string name="app_name">My TicTacToe</string>
    <string name="text_two_people_game">بازی دو نفره</string>
    <string name="text_one_people_game">بازی یک نفره</string>
    <string name="text_name_player_two">بازیکن ۲</string>
    <string name="text_name_player_one">بازیکن ۱</string>
    <string name="text_title_game">بازی tic tac toe</string>
    <string name="text_scores_default">0</string>
    <string name="text_title_description_players_name">لطفاً نام خود را وارد کنید:</string>
    <string name="text_edt_player_name_one">بازیکن شماره یک</string>
    <string name="text_edt_player_name_two">بازیکن شماره دو</string>
    <string name="text_btn_game_start">شروع بازی</string>
    <string name="text_reload_app">تازه سازی</string>
    <string name="text_title_level">لطفاًً سطح بازی را انتخاب کنید</string>
    <string name="text_level_easy">آســــــــــــان</string>
    <string name="text_level_hard">سخــــــت</string>
    <string name="text_button_go_to_level">برو به بازی</string>
    <string name="text_robot_player_two">ربات</string>
</resources>