<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:paddingVertical="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/titleDescriptionPlayersName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_description_players_name"
        android:paddingVertical="4dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPlayerNameOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPlayerNameOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_edt_player_name_one"
            android:padding="8dp"
            android:importantForAutofill="no"
            android:background="@drawable/background_input_layout"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnGameStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_start"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/text_btn_game_start"/>
</LinearLayout>