<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnePeopleGameActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_game"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">
        <TextView
            android:id="@+id/namePlayerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_robot_player_two"
            android:paddingHorizontal="16dp"
            android:textColor="@color/indigo300"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/scoreRobotPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_scores_default"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/scorePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_scores_default"
            android:gravity="end|center_vertical"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/namePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/text_name_player_one"
            android:textColor="@color/indigo300"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/pageGameLayout"
        android:background="@drawable/page_game_layout"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="25dp"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layoutDirection="ltr"
            tools:ignore="NestedWeights">
            <ImageView
                android:id="@+id/ImageView0"
                android:tag="0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
            <ImageView
                android:id="@+id/ImageView1"
                android:tag="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
            <ImageView
                android:id="@+id/ImageView2"
                android:tag="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layoutDirection="ltr">
            <ImageView
                android:id="@+id/ImageView3"
                android:tag="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
            <ImageView
                android:id="@+id/ImageView4"
                android:tag="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
            <ImageView
                android:id="@+id/ImageView5"
                android:tag="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layoutDirection="ltr">
            <ImageView
                android:id="@+id/ImageView6"
                android:tag="6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
            <ImageView
                android:id="@+id/ImageView7"
                android:tag="7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
            <ImageView
                android:id="@+id/ImageView8"
                android:tag="8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:onClick="game"
                android:contentDescription="@null"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkBlack"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/resultLayout">
        <TextView
            android:id="@+id/textMsg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            tools:text="مساوی شده اید"
            android:textColor="@color/white"
            android:paddingHorizontal="15dp"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btnRecreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_reload_app"
            android:background="@drawable/background_invisible_button"
            android:textColor="@color/yellow300"/>
    </LinearLayout>
</LinearLayout>